backend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: letscodebyadabackend
  name: letscodebyadabackend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: letscodebyadabackend
  template:
    metadata:
      labels:
        app: letscodebyadabackend
    spec:
      containers:
      - image: yanalmeida91/letscodebyada:latest
        name: letscodebyada
        ports:
          - containerPort: 8080
