backend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: letscodebyadabackend-svc
  name: letscodebyadabackend-svc
spec:
  ports:
  - name: backend
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: letscodebyadabackend
  type: ClusterIP
