backend/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ing
spec:
  ingressClassName: nginx
  rules:
  - host: backend.devops.com
    http:
      paths:
      - backend:
          service:
            name: letscodebyadabackend-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
